update widget with spacing issue

--- a/css/layout/layout.css
+++ b/css/layout/layout.css
@@ -153,7 +153,7 @@ filter: alpha(opacity=0);
 
 
 	
-.item{padding:30px 50px;height:230px;}
+.item{padding:20px 50px;height:230px;}
 
 .space-top20{
 	margin-top: 20px;
@@ -170,6 +170,6 @@ filter: alpha(opacity=0);
 
 
 /*#send .item:first-child,#receive .item:first-child{padding-top: 82px;}*/
-#receive .item:nth-child(2){padding-top: 52px;};
+/*#receive .item:nth-child(2){padding-top: 52px;}*/
 
 
